Bug 359393. Report correct target for scroll events targeted at elements. r=Olli.Pettay,sr=mats,a=jay